feat: implement ai agents collect  + détection des anomalis